# specialagent

./: makefile  pyproject.toml  readme.md  run
specialagent/: agent.py  cli.py
tests/: test_specialagent.py
