[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specialagent"
version = "0.2.0"
description = ""
readme = "readme.md"
authors = [
    { name = "Jon Craton", email = "jncraton@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
specialagent = "specialagent:main"

[tool.hatch.build.targets.wheel]
packages = ["specialagent"]
